tests/expectations/compiler/finalize/decrement_fail.out
Error [ETYC0372005]: Unknown function `test.aleo/decrement`
    --> compiler-test:12:5
     |
  12 |     decrement(amounts, addr, amount);
     |     ^^^^^^^^^
